Enabled Installing *just type make install *puts file under a CMAKE_INSTALL_PREFIX just as the Makefile script did under the distribute dir

--- a/src/caffe/CMakeLists.txt
+++ b/src/caffe/CMakeLists.txt
@@ -80,3 +80,8 @@ target_link_libraries(caffe layers proto util
 )
 
 add_subdirectory(test)
+
+
+###    Install    #################################################################################
+
+install(TARGETS caffe DESTINATION lib)
