--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ option(PYTHON "Build Python wrapper" OFF)
 option(MATLAB "Build Matlab wrapper" OFF)
 option(TOOLS "Build tools" ON)
 option(EXAMPLES "Build examples" ON)
+option(BUILD_SHARED_LIBS "Build SHARED libs if ON and STATIC otherwise" OFF)
 
 if(NOT BLAS)
     set(BLAS atlas)
@@ -16,11 +17,22 @@ if(NOT CUDA_TEST_DEVICE)
     set(CUDA_TEST_DEVICE -1)
 endif()
 
+#    Install Prefix
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Default install path" FORCE )
+endif()
+
 ###    Configuration    ###########################################################################
+
+#    Enable CTest from top build directory
+enable_testing()
+
+#    Compiler Flags
 set(CMAKE_CXX_COMPILER_FLAGS ${CMAKE_CXX_COMPILER_FLAGS} -Wall)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -fPIC)
 set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} -O3)
 
+#    Include Directories
 set(${PROJECT_NAME}_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/../include)
 include_directories(${${PROJECT_NAME}_INCLUDE_DIR})
 
@@ -56,3 +68,9 @@ if(MATLAB)
     message(STATUS "Matlab enabled")
     add_subdirectory(matlab)
 endif()
+
+###    Install    #################################################################################
+
+#    Install Includes
+file(GLOB folders ${${PROJECT_NAME}_INCLUDE_DIR}/*)
+install(DIRECTORY ${folders} DESTINATION include)
