--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,12 +1,11 @@
 project( Examples )
 
-set(Examples_SOURCES
-        cifar10/convert_cifar_data.cpp
-        mnist/convert_mnist_data.cpp
-)
+#    Find all source files
+file(GLOB_RECURSE Examples_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
+#    Build each source file independently
 foreach(source ${Examples_SOURCES})
     get_filename_component(name ${source} NAME_WE)  
-    add_executable(${name} ${source} ../caffe/blob.cpp)
+    add_executable(${name} ${source})
     target_link_libraries(${name} caffe)
 endforeach(source)
