dummy file just to include proto folder

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,6 +7,6 @@ set(Examples_SOURCES
 
 foreach(source ${Examples_SOURCES})
     get_filename_component(name ${source} NAME_WE)  
-    add_executable(${name} ${source} ../caffe/blob.cpp)
+    add_executable(${name} ${source})
     target_link_libraries(${name} caffe)
 endforeach(source)
